# SDREnumerator

./: .gitignore  CMakeLists.txt  README.md
include/: Device.h  Devices.h  Enums.h  Types.h
src/: Device.cpp  Devices.cpp  Types.cpp  main.cpp
